# ios-cmake

./: .gitignore
samples/hello-app/hello-app.xcodeproj/: project.pbxproj
samples/hello-app/hello-app/Base.lproj/: Main_iPhone.storyboard
samples/hello-lib/: CMakeLists.txt  build.sh
toolchain/: build-gtest.sh  iOS.cmake
